fix alignment

--- a/www.gig.tech/themes/landing/static/css/custom.css
+++ b/www.gig.tech/themes/landing/static/css/custom.css
@@ -103,6 +103,10 @@ h3 {
   letter-spacing: 0em;
 }
 
+.sqs-block-content h3{
+  text-align: left;
+}
+
 .sqs-block-team h3 {
   float: left !important;
 }
